--- a/app/index.css
+++ b/app/index.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Lato");
 body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
-  margin: 0; }
+  margin: 0;
+  font-size: 18px; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  position: relative;
+  top: -15px; }
 
 .fcc {
   background: #006400;
@@ -14,37 +17,68 @@ a {
 .logo {
   width: 100%;
   height: 60px;
-  line-height: 100px; }
-  .logo img {
-    height: 50px; }
+  line-height: 130px; }
+
+.logo img {
+  height: 50px; }
 
 .ldr {
-  width: 80%;
-  margin: auto; }
-  .ldr h2 {
-    color: #006400;
-    text-align: center; }
+  width: 90%;
+  margin: auto;
+  margin-bottom: 20px; }
+
+.ldr h2 {
+  color: #006400;
+  text-align: center; }
 
 .board {
   display: table;
-  border: 1px solid #006400;
+  border: 1px solid #939393;
   border-collapse: collapse;
   width: 100%; }
-  .board img {
-    width: 40px;
-    height: 40px;
-    margin: 0 10px; }
-  .board th {
-    height: 40px;
-    background: #007E00;
-    color: white; }
-  .board td {
-    height: 50px; }
-  .board th, .board td {
-    border: 1px solid #006400; }
-  .board tr:nth-child(even) {
-    background: #FFAD25; }
-  .board tr:nth-child(odd) {
-    background: #E0E0E0; }
-  .board .pts {
-    text-align: center; }
+
+.board a {
+  color: #7a7a7a; }
+
+.board img {
+  width: 40px;
+  height: 40px;
+  margin: 0 15px;
+  border: 2px solid #006400;
+  border-radius: 20%; }
+
+.board th {
+  height: 40px;
+  background: #007E00;
+  color: white; }
+
+.board td {
+  height: 60px; }
+
+.board th, .board td {
+  border: 1px solid #939393; }
+
+.board tr:nth-child(even) {
+  background: #FFAD25;
+  color: white; }
+
+.board tr:nth-child(odd) {
+  color: #FFAD25; }
+
+.board .rank {
+  padding-left: 10px;
+  color: #006400; }
+
+.board .pts {
+  text-align: center; }
+
+.board #recent, .board #alltime {
+  cursor: pointer; }
+
+.board .selected {
+  color: #FFAD25;
+  text-decoration: underline; }
+
+.board .selected::after {
+  content: '\25bc';
+  font-size: .75em; }
