--- a/app/index.scss
+++ b/app/index.scss
@@ -3,15 +3,19 @@ $primary-color: #006400;
 $secondary-color: #007E00;
 $highlight: #FFAD25;
 $highlight2: #E0E0E0;
+$primary-border: 1px solid #939393;
 
 
 body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
   margin: 0;
+  font-size: 18px;
 }
 
 a {
   text-decoration: none;
+  position: relative;
+  top: -15px;
 }
 
 .fcc {
@@ -23,7 +27,7 @@ a {
 .logo {
   width: 100%;
   height: 60px;
-  line-height: 100px;
+  line-height: 130px;
 
   img {
     height: 50px;
@@ -31,8 +35,9 @@ a {
 }
 
 .ldr {
-  width: 80%;
+  width: 90%;
   margin: auto;
+  margin-bottom: 20px;
 
   h2 {
     color: $primary-color;
@@ -42,18 +47,20 @@ a {
 
 .board {
   display: table;
-  border: 1px solid $primary-color;
+  border: $primary-border;
   border-collapse: collapse;
   width: 100%;
+
+  a {
+    color: #7a7a7a;
+  }
 
   img {
     width: 40px;
     height: 40px;
-    margin: 0 10px;
-  }
-
-  a {
-
+    margin: 0 15px;
+    border: 2px solid $primary-color;
+    border-radius: 20%;
   }
 
   th {
@@ -63,23 +70,43 @@ a {
   }
 
   td {
-    height: 50px;
+    height: 60px;
   }
 
   th, td {
-    border: 1px solid $primary-color;
+    border: $primary-border;
   }
 
   tr:nth-child(even) {
     background: $highlight;
+    color: white;
   }
 
   tr:nth-child(odd) {
-    background: $highlight2;
+    color: $highlight;
+  }
+
+  .rank {
+    padding-left: 10px;
+    color: $primary-color;
   }
 
   .pts {
     text-align: center;
+  }
+
+  #recent, #alltime {
+    cursor: pointer;
+  }
+
+  .selected {
+    color: $highlight;
+    text-decoration: underline;
+
+    &::after {
+      content: '\25bc';
+      font-size: .75em;
+    }
   }
 
 }
